<resources>
    <string name="app_name">Bagito</string>
    <string name="stripe_key">pk_test_3qyizapfoMvt2elZoP1JNC3g</string>
    <string name="subscription_details">Updating your card will begin your Bagito subscription at $4.99/month.</string>
    <string name="subscription_cancel_details">Cancelling your Bagito subscription will also remove your card.</string>
    <string name="return_bag_instructions">Scan the Bag’s QR code to return the bag</string>
    <string name="return_bin_instructions">Scan the Bin’s QR code to return the bag</string>

    <string name="title_activity_login">Sign in</string>
    <string name="bagito_logo">Bagito Logo</string>
    <string name="back">back</string>
    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_confirm_new_password">Confirm New Password</string>
    <string name="prompt_city">City</string>
    <string name="prompt_state">State</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_missing_card_info">Please fill in all credit card information</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_card">This card is invalid</string>
    <string name="error_invalid_card_number">This card number is invalid</string>
    <string name="error_invalid_month_year">This month/year is invalid</string>
    <string name="error_invalid_cvv">This CVV number is invalid</string>
    <string name="error_password_mismatch_with_confirm">The password does not match the previous one</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="personal_info">Personal Information</string>
    <string name="allow_notif">Allow Notifications</string>
    <string name="payment_info">Payment Information</string>
    <string name="card_number">Card Number</string>
    <string name="month_year">MM/YY</string>
    <string name="cvv_number">CVV</string>
    <string name="action_save">Save</string>
    <string name="cancel_subscription">Cancel Subscription</string>

</resources>
